# docker-sandbox

./: .gitignore  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
apps/sandbox/: Dockerfile  Makefile  README.md  pyproject.toml
apps/sandbox/sandbox/: main.py
apps/sandbox/sandbox/libs/container/: __init__.py
apps/sandbox/sandbox/libs/data/: __init__.py
apps/sandbox/sandbox/libs/typedspark_exploration/: __init__.py
apps/sandbox/sandbox/specs/: person.json
apps/sandbox/tests/: create_mock_dataframes_task_test.py
python/: Dockerfile  Makefile  requirements.txt
python/src/: main.py
python/src/lib/container/: __init__.py
python/src/lib/utils/: __init__.py
python/src/specs/: sandbox.json
