[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Damian Trafialek <damian.trafialek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.1"
injector = "^0.21.0"
pandas = "^2.2.1"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
typedspark = "^1.3.2"

[tool.poetry.extras]
extras = ["extras"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
